# visionArtificial

./: README.md  ejercicioIni  prueba.cpp
ejercicios/ej1/: CMakeLists.txt  ejercicio.cxx
ejercicios/ej1/ejercicio1/: ej1_itk.cxx
ejercicios/ej10/: resultados  run  textureFeaturesWindow.cxx
ejercicios/ej11/: CMakeLists.txt  hough.cxx
ejercicios/ej2/03_rescale_intensity/: 03_rescale_intensity_itk.cxx  03_rescale_intensity_ocv.cxx  CMakeLists.txt  re_itk.cxx
ejercicios/ej3/: re.cxx
ejercicios/ej4/: 2drigid.cxx  CMakeLists.txt  azimuth.cxx  ej1_itk.cxx
ejercicios/ej4/ejemplos/: CMakeLists.txt
ejercicios/ej5/: ejemplo.cxx  filtro_ocv.cxx
ejercicios/ej8/: CMakeLists.txt  backcanny.cxx  seg.cxx
ejercicios/ej8/ejemplos/: CMakeLists.txt  backprop.cxx  canny.cxx  sobel.cxx
ejercicios/ej9/: CMakeLists.txt  confidence.cxx  connected.cxx  watershed.cxx
entregar/forma/: caras.cxx  readme
errores-bellos/destruccion/: CMakeLists.txt  dist.cxx  mezcl.cxx
errores-bellos/errsuma/: CMakeLists.txt  err1.cxx
errores-bellos/mezcla/: CMakeLists.txt  ej1_ocv.cxx  mezcl.cxx  run
errores-bellos/suma/: CMakeLists.txt  ej1_itk.cxx
metodos/: proceso  regiones.cxx
metodos/autoshed/: CMakeLists.txt  water.cxx
metodos/backProjection/: CMakeLists.txt  bp.cxx  bping.cxx
metodos/bordes/: CMakeLists.txt  bordes.cxx  canny.cxx  readme  run
metodos/distancia/: CMakeLists.txt  distancia.cxx  regiones.cxx  run  valores
metodos/ejecutables/: save  ubicaciones
metodos/ejecutables/exe/: bordes  bp  bping  distancia  limpiar  otsu  regiones  water  water2
metodos/kernels/: CMakeLists.txt  kernels.cxx
metodos/limpiar/: CMakeLists.txt  limpiar.cxx
metodos/morfologia/: clean  otsu.cxx  run
metodos/otsu/: CMakeLists.txt  clean
metodos/regiones/: regiones.cxx  run
metodos/watershed/: CMakeLists.txt  water2.cxx
parcial/kernels/: kernels.cxx
parcial/matriz/: CMakeLists.txt  mat.cxx
proyecto/: .run.swp  CMakeLists.txt  caras.cxx  clean  distancia.hxx  filtros.hxx  ideas  personas  run  valores
proyecto/Difusa/: Clasificacion.cpp  Pertenencia.cpp  dif  difusa.cpp  test.cpp
proyecto/fuzzy/: Clasificacion.cpp  Pertenencia.cpp  dif  difusa.cpp  makefile  prueba  test.cpp  valores1
proyecto/knn/: knn.cxx
proyecto/otros/: internet
proyecto/prueba/: CMakeLists.txt  circulos.cxx  contorno.cxx
proyecto/resultados/: personasFuzzy  personasRes  personasViable
proyecto/vision/: distancia.hxx
resumen/filtrado/: CMakeLists.txt
resumen/morfologia/: otsu.cxx
resumen/movimiento/: CMakeLists.txt  re.cxx
talleres/Taller3/: CMakeLists.txt  regiones.cxx  run
talleres/Taller4/: CMakeLists.txt  distancia.cxx  otsu.cxx  taller4.cxx
(+12 files in other folders)
